Feature Update - Updated the settings page UI to handle the threshold values, setup for api requests and updated api.yaml to now give to backend to implement api
